--- a/package.json
+++ b/package.json
@@ -7,26 +7,26 @@
     "url": "https://github.com/dolmios/dolmios.com/issues"
   },
   "dependencies": {
-    "@next/font": "^13.0.6",
+    "@next/font": "^13.0.7",
     "@vercel/analytics": "^0.1.6",
     "csstype": "^3.1.1",
     "goober": "^2.1.11",
     "goober-autoprefixer": "^1.2.3",
-    "next": "^13.0.6",
+    "next": "^13.0.7",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "swr": "^1.3.0",
     "typescript": "^4.9.4"
   },
   "devDependencies": {
-    "@types/node": "^18.11.15",
+    "@types/node": "^18.11.17",
     "@types/react": "^18.0.26",
-    "eslint": "^8.29.0",
-    "eslint-config-dolmios": "^1.3.2",
-    "eslint-config-next": "^13.0.6",
-    "next-sitemap": "^3.1.32",
+    "eslint": "^8.30.0",
+    "eslint-config-dolmios": "^1.3.5",
+    "eslint-config-next": "^13.0.7",
+    "next-sitemap": "^3.1.43",
     "prettier": "^2.8.1",
-    "vercel": "^28.8.0"
+    "vercel": "^28.10.0"
   },
   "homepage": "https://github.com/dolmios",
   "keywords": [
@@ -37,7 +37,18 @@
     "vercel"
   ],
   "license": "MIT",
-  "prettier": "eslint-config-dolmios/.prettierrc.json",
+  "prettier": "eslint-config-dolmios/configs/prettier",
+  "eslintConfig": {
+    "extends": [
+      "dolmios",
+      "next/core-web-vitals"
+    ],
+    "settings": {
+      "import/core-modules": [
+        "styled-jsx/css"
+      ]
+    }
+  },
   "private": false,
   "repository": {
     "type": "git",
