--- a/package.json
+++ b/package.json
@@ -7,11 +7,10 @@
     "url": "https://github.com/dolmios/dolmios.com/issues"
   },
   "dependencies": {
+    "@next/env": "^13.0.7",
     "@next/font": "^13.0.7",
+    "@stitches/react": "^1.2.8",
     "@vercel/analytics": "^0.1.6",
-    "csstype": "^3.1.1",
-    "goober": "^2.1.11",
-    "goober-autoprefixer": "^1.2.3",
     "next": "^13.0.7",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -34,7 +33,8 @@
     "nextjs",
     "react",
     "typescript",
-    "vercel"
+    "vercel",
+    "stitches"
   ],
   "license": "MIT",
   "prettier": "eslint-config-dolmios/configs/prettier",
