--- a/package.json
+++ b/package.json
@@ -7,22 +7,23 @@
     "url": "https://github.com/dolmios/dolmios.com/issues"
   },
   "dependencies": {
-    "@next/env": "^13.0.7",
-    "@next/font": "^13.0.7",
+    "@next/env": "^13.1.0",
+    "@next/font": "^13.1.0",
     "@stitches/react": "^1.2.8",
     "@vercel/analytics": "^0.1.6",
-    "next": "^13.0.7",
+    "next": "^13.1.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "swr": "^1.3.0",
+    "swr": "2.0.0",
     "typescript": "^4.9.4"
   },
   "devDependencies": {
     "@types/node": "^18.11.17",
     "@types/react": "^18.0.26",
+    "@types/react-dom": "^18.0.9",
     "eslint": "^8.30.0",
     "eslint-config-dolmios": "^1.3.5",
-    "eslint-config-next": "^13.0.7",
+    "eslint-config-next": "^13.1.0",
     "next-sitemap": "^3.1.43",
     "prettier": "^2.8.1",
     "vercel": "^28.10.0"
@@ -42,12 +43,7 @@
     "extends": [
       "dolmios",
       "next/core-web-vitals"
-    ],
-    "settings": {
-      "import/core-modules": [
-        "styled-jsx/css"
-      ]
-    }
+    ]
   },
   "private": false,
   "repository": {
