--- a/package.json
+++ b/package.json
@@ -12,19 +12,18 @@
     "@stitches/react": "^1.2.8",
     "@vercel/analytics": "^0.1.6",
     "next": "^13.1.1",
-    "react": "18.2.0",
+    "react": "^18.2.0",
     "react-dom": "18.2.0",
-    "swr": "2.0.0",
+    "swr": "^2.0.0",
     "typescript": "^4.9.4"
   },
   "devDependencies": {
     "@types/node": "^18.11.18",
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.10",
-    "eslint": "^8.30.0",
-    "eslint-config-dolmios": "^1.3.6",
-    "eslint-config-next": "^13.1.1",
-    "next-sitemap": "^3.1.43",
+    "eslint": "^8.31.0",
+    "eslint-config-dolmios": "^1.4.0",
+    "next-sitemap": "^3.1.44",
     "prettier": "^2.8.1",
     "vercel": "^28.10.1"
   },
@@ -41,8 +40,7 @@
   "prettier": "eslint-config-dolmios/configs/prettier",
   "eslintConfig": {
     "extends": [
-      "dolmios",
-      "next/core-web-vitals"
+      "dolmios"
     ]
   },
   "private": false,
