--- a/package.json
+++ b/package.json
@@ -9,39 +9,39 @@
   "dependencies": {
     "@stitches/react": "^1.2.8",
     "@vercel/analytics": "^1.3.1",
-    "next": "^14.2.4",
+    "next": "^14.2.6",
     "react": "^18.3.1",
     "react-dom": "18.2.0",
     "swr": "^2.2.5",
-    "typescript": "^5.5.2"
+    "typescript": "^5.5.4",
+    "vercel": "^37.1.2"
   },
   "devDependencies": {
-    "@next/env": "^14.2.4",
-    "@types/node": "^20.14.8",
-    "@types/react": "^18.3.3",
+    "@next/env": "^14.2.6",
+    "@types/node": "^22.5.0",
+    "@types/react": "^18.3.4",
     "@types/react-dom": "^18.3.0",
     "eslint": "^8.57.0",
-    "eslint-config-dolmios": "^1.10.1",
+    "eslint-config-dolmios": "^1.11.0",
     "next-sitemap": "^4.2.3",
-    "prettier": "^3.3.2",
-    "vercel": "^34.2.7"
+    "prettier": "^3.3.3"
+  },
+  "eslintConfig": {
+    "extends": [
+      "dolmios"
+    ]
   },
   "homepage": "https://github.com/dolmios",
   "keywords": [
     "next",
     "nextjs",
     "react",
+    "stitches",
     "typescript",
-    "vercel",
-    "stitches"
+    "vercel"
   ],
   "license": "MIT",
   "prettier": "eslint-config-dolmios/configs/prettier",
-  "eslintConfig": {
-    "extends": [
-      "dolmios"
-    ]
-  },
   "private": false,
   "repository": {
     "type": "git",
