--- a/package.json
+++ b/package.json
@@ -8,19 +8,19 @@
   },
   "dependencies": {
     "@stitches/react": "^1.2.8",
-    "@vercel/analytics": "^1.3.1",
-    "next": "^14.2.15",
-    "react": "^18.3.1",
-    "react-dom": "18.2.0",
+    "@vercel/analytics": "^1.3.2",
+    "next": "15.0.2",
+    "react": "18.3.1",
+    "react-dom": "18.3.1",
     "swr": "^2.2.5",
     "typescript": "^5.6.3",
-    "vercel": "^37.8.0"
+    "vercel": "^37.14.0"
   },
   "devDependencies": {
-    "@next/env": "^14.2.15",
-    "@types/node": "^22.7.5",
-    "@types/react": "^18.3.11",
-    "@types/react-dom": "^18.3.1",
+    "@next/env": "15.0.2",
+    "@types/node": "^22.8.7",
+    "@types/react": "18.3.12",
+    "@types/react-dom": "18.3.1",
     "eslint": "^8.57.1",
     "eslint-config-dolmios": "^1.11.1",
     "next-sitemap": "^4.2.3",
@@ -49,12 +49,18 @@
   },
   "scripts": {
     "build": "next build",
-    "dev": "echo '⚡️ Fetching device IP for development...' && ipconfig getifaddr en0 && echo '🫡' && next dev -p 420",
+    "dev": "echo '⚡️ Fetching device IP for development...' && ipconfig getifaddr en0 && echo '🫡' && next dev --turbopack -p 420",
     "env:link": "vercel link",
     "env:local": "vercel env pull .env.local",
     "lint": "eslint . --ext js,jsx,ts,tsx",
     "prettier": "prettier --write '**/*.{js,jsx,tsx}' '!node_modules/**' '!.git/**' '!.next/**'",
     "sitemap": "next-sitemap",
     "tidy": "pnpm lint && pnpm prettier"
+  },
+  "pnpm": {
+    "overrides": {
+      "@types/react": "18.3.12",
+      "@types/react-dom": "18.3.1"
+    }
   }
 }
