--- a/package.json
+++ b/package.json
@@ -8,23 +8,24 @@
   },
   "dependencies": {
     "@stitches/react": "^1.2.8",
-    "@vercel/analytics": "^1.3.2",
-    "next": "15.0.2",
-    "react": "18.3.1",
-    "react-dom": "18.3.1",
-    "swr": "^2.2.5",
-    "typescript": "^5.6.3",
-    "vercel": "^37.14.0"
+    "@vercel/analytics": "^1.4.1",
+    "next": "15.1.2",
+    "react": "19.0.0",
+    "react-dom": "19.0.0",
+    "react-wrap-balancer": "^1.1.1",
+    "swr": "^2.3.0",
+    "typescript": "^5.7.2",
+    "vercel": "^39.2.2"
   },
   "devDependencies": {
-    "@next/env": "15.0.2",
-    "@types/node": "^22.8.7",
-    "@types/react": "18.3.12",
-    "@types/react-dom": "18.3.1",
+    "@next/env": "15.1.2",
+    "@types/node": "^22.10.2",
+    "@types/react": "19.0.2",
+    "@types/react-dom": "19.0.2",
     "eslint": "^8.57.1",
     "eslint-config-dolmios": "^1.11.1",
     "next-sitemap": "^4.2.3",
-    "prettier": "^3.3.3"
+    "prettier": "^3.4.2"
   },
   "eslintConfig": {
     "extends": [
@@ -59,8 +60,8 @@
   },
   "pnpm": {
     "overrides": {
-      "@types/react": "18.3.12",
-      "@types/react-dom": "18.3.1"
+      "@types/react": "19.0.2",
+      "@types/react-dom": "19.0.2"
     }
   }
 }
