--- a/package.json
+++ b/package.json
@@ -9,19 +9,19 @@
   "dependencies": {
     "@stitches/react": "^1.2.8",
     "@vercel/analytics": "^1.4.1",
-    "next": "15.1.2",
-    "react": "19.0.0",
-    "react-dom": "19.0.0",
+    "next": "^15.1.6",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
     "react-wrap-balancer": "^1.1.1",
-    "swr": "^2.3.0",
-    "typescript": "^5.7.2",
-    "vercel": "^39.2.2"
+    "swr": "^2.3.2",
+    "typescript": "^5.7.3",
+    "vercel": "^39.4.2"
   },
   "devDependencies": {
-    "@next/env": "15.1.2",
-    "@types/node": "^22.10.2",
-    "@types/react": "19.0.2",
-    "@types/react-dom": "19.0.2",
+    "@next/env": "^15.1.6",
+    "@types/node": "^22.13.1",
+    "@types/react": "^19.0.8",
+    "@types/react-dom": "^19.0.3",
     "eslint": "^8.57.1",
     "eslint-config-dolmios": "^1.11.1",
     "next-sitemap": "^4.2.3",
@@ -57,11 +57,5 @@
     "prettier": "prettier --write '**/*.{js,jsx,tsx}' '!node_modules/**' '!.git/**' '!.next/**'",
     "sitemap": "next-sitemap",
     "tidy": "pnpm lint && pnpm prettier"
-  },
-  "pnpm": {
-    "overrides": {
-      "@types/react": "19.0.2",
-      "@types/react-dom": "19.0.2"
-    }
   }
 }
