--- a/package.json
+++ b/package.json
@@ -7,7 +7,6 @@
     "url": "https://github.com/dolmios/dolmios.com/issues"
   },
   "dependencies": {
-    "@stitches/react": "^1.2.8",
     "@vercel/analytics": "^1.5.0",
     "next": "^15.3.2",
     "react": "^19.1.0",
@@ -19,12 +18,11 @@
   },
   "devDependencies": {
     "@next/env": "^15.3.2",
-    "@types/node": "^22.15.14",
+    "@types/node": "^22.15.15",
     "@types/react": "^19.1.3",
     "@types/react-dom": "^19.1.3",
     "eslint": "^8.57.1",
     "eslint-config-dolmios": "^1.11.1",
-    "next-sitemap": "^4.2.3",
     "prettier": "^3.5.3"
   },
   "eslintConfig": {
@@ -37,7 +35,7 @@
     "next",
     "nextjs",
     "react",
-    "stitches",
+    "css-modules",
     "typescript",
     "vercel"
   ],
@@ -55,7 +53,6 @@
     "env:local": "vercel env pull .env.local",
     "lint": "eslint . --ext js,jsx,ts,tsx",
     "prettier": "prettier --write '**/*.{js,jsx,tsx}' '!node_modules/**' '!.git/**' '!.next/**'",
-    "sitemap": "next-sitemap",
     "tidy": "pnpm lint && pnpm prettier"
   }
 }
