--- a/package.json
+++ b/package.json
@@ -8,22 +8,23 @@
   },
   "dependencies": {
     "@vercel/analytics": "^1.5.0",
-    "next": "^15.3.2",
+    "next": "^15.4.3",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-wrap-balancer": "^1.1.1",
-    "swr": "^2.3.3",
+    "stoop": "^0.1.0",
+    "swr": "^2.3.4",
     "typescript": "^5.8.3",
     "vercel": "^39.4.2"
   },
   "devDependencies": {
-    "@next/env": "^15.3.2",
-    "@types/node": "^22.15.15",
-    "@types/react": "^19.1.3",
-    "@types/react-dom": "^19.1.3",
+    "@next/env": "^15.4.3",
+    "@types/node": "^22.16.5",
+    "@types/react": "^19.1.8",
+    "@types/react-dom": "^19.1.6",
     "eslint": "^8.57.1",
     "eslint-config-dolmios": "^1.11.1",
-    "prettier": "^3.5.3"
+    "prettier": "^3.6.2"
   },
   "eslintConfig": {
     "extends": [
