--- a/package.json
+++ b/package.json
@@ -7,30 +7,27 @@
     "url": "https://github.com/dolmios/dolmios.com/issues"
   },
   "dependencies": {
+    "@floating-ui/dom": "^1.7.4",
     "@vercel/analytics": "^1.5.0",
-    "next": "^15.4.3",
-    "react": "^19.1.0",
-    "react-dom": "^19.1.0",
+    "clsx": "^2.1.1",
+    "next": "^16.0.1",
+    "react": "^19.2.0",
+    "react-dom": "^19.2.0",
     "react-wrap-balancer": "^1.1.1",
-    "stoop": "^0.1.0",
-    "swr": "^2.3.4",
-    "typescript": "^5.8.3",
-    "vercel": "^39.4.2"
+    "swr": "^2.3.6",
+    "typescript": "^5.9.3",
+    "vercel": "^48.9.0"
   },
   "devDependencies": {
-    "@next/env": "^15.4.3",
-    "@types/node": "^22.16.5",
-    "@types/react": "^19.1.8",
-    "@types/react-dom": "^19.1.6",
-    "eslint": "^8.57.1",
-    "eslint-config-dolmios": "^1.11.1",
+    "@next/env": "^16.0.1",
+    "@types/node": "^24.10.0",
+    "@types/react": "^19.2.3",
+    "@types/react-dom": "^19.2.2",
+    "eslint": "9.39.1",
+    "eslint-config-dolmios": "2.0.12",
     "prettier": "^3.6.2"
   },
-  "eslintConfig": {
-    "extends": [
-      "dolmios"
-    ]
-  },
+
   "homepage": "https://github.com/dolmios",
   "keywords": [
     "next",
@@ -49,11 +46,11 @@
   },
   "scripts": {
     "build": "next build",
-    "dev": "echo '⚡️ Fetching device IP for development...' && ipconfig getifaddr en0 && echo '🫡' && next dev --turbopack -p 420",
+    "dev": "node scripts/dev.js",
     "env:link": "vercel link",
     "env:local": "vercel env pull .env.local",
-    "lint": "eslint . --ext js,jsx,ts,tsx",
-    "prettier": "prettier --write '**/*.{js,jsx,tsx}' '!node_modules/**' '!.git/**' '!.next/**'",
+    "lint": "eslint . --ext js,jsx,ts,tsx,ts --fix",
+    "prettier": "prettier --write '**/*.{js,jsx,tsx,ts,json}' '!node_modules/**' '!.git/**' '!.next/**'",
     "tidy": "pnpm lint && pnpm prettier"
   }
 }
