--- a/package.json
+++ b/package.json
@@ -7,47 +7,29 @@
     "url": "https://github.com/dolmios/dolmios.com/issues"
   },
   "dependencies": {
-    "@stitches/react": "^1.2.8",
     "@vercel/analytics": "^1.6.1",
-    "next": "^15.5.9",
+    "next": "^16.1.1",
     "react": "^19.2.3",
     "react-dom": "^19.2.3",
     "react-wrap-balancer": "^1.1.1",
+    "stoop": "^0.4.1",
+    "stoop-ui": "^0.1.2",
     "swr": "^2.3.8",
     "typescript": "^5.9.3",
-    "vercel": "^39.4.2"
+    "vercel": "^50.1.4"
   },
   "devDependencies": {
-    "@next/env": "^15.5.9",
-    "@types/node": "^22.19.3",
+    "@next/env": "^16.1.1",
+    "@types/node": "^25.0.3",
     "@types/react": "^19.2.7",
     "@types/react-dom": "^19.2.3",
-    "eslint": "^8.57.1",
-    "eslint-config-dolmios": "^1.11.1",
+    "eslint": "^9.39.2",
+    "eslint-config-dolmios": "^2.0.13",
     "next-sitemap": "^4.2.3",
     "prettier": "^3.7.4"
   },
-  "eslintConfig": {
-    "extends": [
-      "dolmios"
-    ]
-  },
-  "homepage": "https://github.com/dolmios",
-  "keywords": [
-    "next",
-    "nextjs",
-    "react",
-    "stitches",
-    "typescript",
-    "vercel"
-  ],
-  "license": "MIT",
   "prettier": "eslint-config-dolmios/configs/prettier",
   "private": false,
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/dolmios/dolmios.com.git"
-  },
   "scripts": {
     "build": "next build",
     "dev": "echo '⚡️ Fetching device IP for development...' && ipconfig getifaddr en0 && echo '🫡' && next dev --turbopack -p 420",
