chore: work on projects page

--- a/package.json
+++ b/package.json
@@ -10,18 +10,20 @@
     "@libsql/client": "^0.17.0",
     "@vercel/analytics": "^1.6.1",
     "drizzle-orm": "^0.45.1",
+    "mapbox-gl": "^3.17.0",
     "next": "^16.1.1",
     "react": "^19.2.3",
     "react-dom": "^19.2.3",
     "react-wrap-balancer": "^1.1.1",
-    "stoop": "^0.5.2",
-    "stoop-ui": "^0.1.4",
+    "stoop": "^0.6.1",
+    "stoop-ui": "^0.1.8",
     "swr": "^2.3.8",
     "typescript": "^5.9.3",
     "vercel": "^50.1.6"
   },
   "devDependencies": {
     "@next/env": "^16.1.1",
+    "@types/mapbox-gl": "^3.4.1",
     "@types/node": "^25.0.3",
     "@types/react": "^19.2.7",
     "@types/react-dom": "^19.2.3",
@@ -37,10 +39,10 @@
   "scripts": {
     "build": "next build",
     "db:generate": "drizzle-kit generate",
-    "db:migrate": "node --import tsx data/db/migrate.ts",
-    "db:seed": "node --import tsx data/db/seed.ts",
+    "db:migrate": "node --import tsx db/migrate.ts",
+    "db:seed": "node --import tsx db/seed.ts",
     "db:studio": "drizzle-kit studio",
-    "dev": "echo '⚡️ Fetching device IP for development...' && ipconfig getifaddr en0 && echo '🫡' && next dev --turbopack -p 420",
+    "dev": "echo 'Fetching device IP for development...' && ipconfig getifaddr en0 && next dev --turbopack -p 420",
     "env:link": "vercel link",
     "env:local": "vercel env pull .env.local",
     "lint": "eslint . --ext js,jsx,ts,tsx",
